[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "aimeex-sovereign"
version = "1.0.0"
description = "Recursive Autopoiesis System with Transdimensional Σ-Architecture"
requires-python = ">=3.10"
readme = {file = "README.md", content-type = "text/markdown"}
dependencies = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "numpy>=1.26.4,<2.0.0",
    "scipy>=1.10.0",
    "sympy>=1.12",
    "qutip>=4.7.0",
    "pytorch-lightning>=2.0.0",
    "einops>=0.7.0",
    "tokenizers>=0.15.2",
    "transformers>=4.35.0",
    "datasets>=2.14.0",
    "huggingface_hub>=0.20.0",
    "pyqtgraph>=0.13.0",
    "pydantic>=2.0",
    "cryptography>=41.0.0",
    "psutil>=5.9.0",
    "tqdm>=4.64.1",
    "PyYAML>=6.0",
    "aiohttp>=3.8.0",
    "websockets>=11.0.0",
    "quantumlib-cirq>=1.3.0",
    "pennylane>=0.32.0",
    "setuptools>=61.0"
]

[project.optional-dependencies]
quantum = [
    "qiskit>=0.44.0",
    "qiskit-aer>=0.12.0",
    "amazon-braket-sdk>=1.35.0"
]

security = [
    "pycryptodome>=3.18.0",
    "crypten>=0.4.0"
]

visualization = [
    "matplotlib>=3.6.2",
    "plotly>=5.15.0",
    "pyvista>=0.38.0"
]

[project.scripts]
aimeex = "aimeex.cli:main"

[project.urls]
"Homepage" = "https://aimeex.sovereign"
"Documentation" = "https://docs.aimeex.sovereign"
"Repository" = "https://git.aimeex.sovereign"

[tool.setuptools.packages.find]
exclude = ["tests*", "examples*", "legacy*"]

[tool.setuptools.package-data]
"aimeex.resonance" = ["*.json", "*.yaml"]
"aimeex.quantum" = ["*.circuit"]

[tool.wheel]
exclude = ["tests*", "examples*", "legacy*"]

[project.entry-points."aimeex_modules"]
core = "aimeex.core:ΣArchitecture"
actuators = "aimeex.actuators:ActuatorSystem"
security = "aimeex.security:TrustlockProtocol"